created time blocks for standard business hours on our calender

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -28,7 +29,64 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container">
+
+    <div class="container bg-secondary rounded-pill">
+        <section class="row time-block"> 
+          <div class= "col-md-1 hour mt-4 font-weight-bold text-body"> 9 AM</div>
+          <textarea class="col-md-10 bg-primary rounded text-white description"> This will be text</textarea>
+          <button class="btn saveBtn col-md-1 rounded-pill"><span class="oi oi-clipboard fa-lg"></span></button>
+        </section>
+
+        <section class="row time-block mt-1"> 
+          <div class= "col-md-1 hour text-center mt-4 font-weight-bold text-body "> 10 AM</div>
+          <textarea class="col-md-10 bg-primary rounded text-white description">This will be text</textarea>
+          <button class="btn saveBtn col-md-1 rounded-pill"><span class="oi oi-clipboard fa-lg"></span></button>
+        </section>
+       
+        <section class="row time-block mt-1"> 
+          <div class= "col-md-1 hour text-center mt-4 font-weight-bold text-body"> 11 AM</div>
+          <textarea class="col-md-10 bg-primary rounded text-white description">This will be text</textarea>
+          <button class="btn saveBtn col-md-1 rounded-pill"><span class="oi oi-clipboard fa-lg"></span></button>
+        </section>
+
+        <section class="row time-block mt-1"> 
+          <div class= "col-md-1 hour  text-center mt-4 font-weight-bold text-body"> 12 PM</div>
+          <textarea class="col-md-10 bg-primary rounded text-white description description">This will be text</textarea>
+          <button class="btn saveBtn col-md-1 rounded-pill"><span class="oi oi-clipboard fa-lg"></span></button>
+        </section>
+
+        <section class="row time-block mt-1"> 
+          <div class= "col-md-1 hour  text-center mt-4 font-weight-bold text-body"> 1 PM</div>
+          <textarea class="col-md-10 bg-primary rounded text-white description">This will be text</textarea>
+          <button class="btn saveBtn col-md-1 rounded-pill"><span class="oi oi-clipboard fa-lg"></span></button>
+        </section>
+
+        <section class="row time-block mt-1"> 
+          <div class= "col-md-1 hour  text-center mt-4 font-weight-bold text-body"> 2 PM</div>
+          <textarea class="col-md-10 bg-primary rounded text-white description">This will be text</textarea>
+          <button class="btn saveBtn col-md-1 rounded-pill"><span class="oi oi-clipboard fa-lg"></span></button>
+        </section>
+
+        <section class="row time-block mt-1"> 
+          <div class= "col-md-1 hour  text-center mt-4 font-weight-bold text-body"> 3 PM</div>
+          <textarea class="col-md-10 bg-primary rounded text-white description">This will be text</textarea>
+          <button class="btn saveBtn col-md-1 rounded-pill"><span class="oi oi-clipboard fa-lg"></span></button>
+        </section>
+
+        <section class="row time-block mt-1"> 
+          <div class= "col-md-1 hour  text-center mt-4 font-weight-bold text-body"> 4 PM</div>
+          <textarea class="col-md-10 bg-primary rounded text-white description">This will be text</textarea>
+          <button class="btn saveBtn col-md-1 rounded-pill"><span class="oi oi-clipboard fa-lg"></span></button>
+        </section>
+
+        <section class="row time-block mt-1"> 
+          <div class= "col-md-1 hour  text-center mt-4 font-weight-bold text-body"> 5 PM</div>
+          <textarea class="col-md-10 bg-primary rounded text-white description">This will be text</textarea>
+          <button class="btn saveBtn col-md-1 rounded-pill"><span class="oi oi-clipboard fa-lg"></span></button>
+        </section>
+
+        
+      </div>
       <!-- Timeblocks go here -->
     </div>
 
