added delete calendar button

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
+      <button id="clearCalendar" type="button" class="btn btn-danger"><span class="oi oi-delete"></span> Delete Calender</button>
     </header>
 
     <div class="container bg-secondary rounded-pill">
@@ -81,7 +82,7 @@
 
         <section class="row time-block mt-1"> 
           <div class= "col-md-1 hour  text-center mt-4 font-weight-bold text-body"> 5 PM</div>
-          <textarea id="17" class="col-md-10 bg-primary rounded text-white description">This will be text</textarea>
+          <textarea id="17" class="col-md-10 bg-primary rounded text-white description"></textarea>
           <button class="btn saveBtn col-md-1 rounded-pill"><span class="oi oi-clipboard fa-lg"></span></button>
         </section>
 
