Editing the Readme

--- a/index.html
+++ b/index.html
@@ -86,11 +86,13 @@
           <button class="btn saveBtn col-md-1 rounded-pill"><span class="oi oi-clipboard fa-lg"></span></button>
         </section>
 
-        
       </div>
-      <!-- Timeblocks go here -->
     </div>
 
+    <footer id="footer">
+      <p id="footer-copy" class="text-center mt-5 "> &copy; Copyright 2021, JenMLucas. All Rights Reserved </p>
+  </footer>
+  
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="assets/js/script.js"></script>
