added detailed comments

--- a/index.html
+++ b/index.html
@@ -34,55 +34,55 @@
     <div class="container bg-secondary rounded-pill">
         <section class="row time-block"> 
           <div class= "col-md-1 hour mt-4 font-weight-bold text-body"> 9 AM</div>
-          <textarea id="9" class="col-md-10 bg-primary rounded text-white description"></textarea>
+          <textarea id="9" class="col-md-10 bg-primary rounded text-white description content"></textarea>
           <button class="btn saveBtn col-md-1 rounded-pill"><span class="oi oi-clipboard fa-lg"></span></button>
         </section>
 
         <section class="row time-block mt-1"> 
           <div class= "col-md-1 hour text-center mt-4 font-weight-bold text-body "> 10 AM</div>
-          <textarea id="10"  class="col-md-10 bg-primary rounded text-white description"></textarea>
+          <textarea id="10"  class="col-md-10 bg-primary rounded text-white description content"></textarea>
           <button class="btn saveBtn col-md-1 rounded-pill"><span class="oi oi-clipboard fa-lg"></span></button>
         </section>
        
         <section class="row time-block mt-1"> 
           <div class= "col-md-1 hour text-center mt-4 font-weight-bold text-body"> 11 AM</div>
-          <textarea id="11" class="col-md-10 bg-primary rounded text-white description"></textarea>
+          <textarea id="11" class="col-md-10 bg-primary rounded text-white description content"></textarea>
           <button class="btn saveBtn col-md-1 rounded-pill"><span class="oi oi-clipboard fa-lg"></span></button>
         </section>
 
         <section class="row time-block mt-1"> 
           <div class= "col-md-1 hour  text-center mt-4 font-weight-bold text-body"> 12 PM</div>
-          <textarea id="12" class="col-md-10 bg-primary rounded text-white description description"></textarea>
+          <textarea id="12" class="col-md-10 bg-primary rounded text-white description content"></textarea>
           <button class="btn saveBtn col-md-1 rounded-pill"><span class="oi oi-clipboard fa-lg"></span></button>
         </section>
 
         <section class="row time-block mt-1"> 
           <div class= "col-md-1 hour  text-center mt-4 font-weight-bold text-body"> 1 PM</div>
-          <textarea id="13" class="col-md-10 bg-primary rounded text-white description"></textarea>
+          <textarea id="13" class="col-md-10 bg-primary rounded text-white description content"></textarea>
           <button class="btn saveBtn col-md-1 rounded-pill"><span class="oi oi-clipboard fa-lg"></span></button>
         </section>
 
         <section class="row time-block mt-1"> 
           <div class= "col-md-1 hour  text-center mt-4 font-weight-bold text-body"> 2 PM</div>
-          <textarea id="14" class="col-md-10 bg-primary rounded text-white description"></textarea>
+          <textarea id="14" class="col-md-10 bg-primary rounded text-white description content"></textarea>
           <button class="btn saveBtn col-md-1 rounded-pill"><span class="oi oi-clipboard fa-lg"></span></button>
         </section>
 
         <section class="row time-block mt-1"> 
           <div class= "col-md-1 hour  text-center mt-4 font-weight-bold text-body"> 3 PM</div>
-          <textarea id="15" class="col-md-10 bg-primary rounded text-white description"></textarea>
+          <textarea id="15" class="col-md-10 bg-primary rounded text-white description content"></textarea>
           <button class="btn saveBtn col-md-1 rounded-pill"><span class="oi oi-clipboard fa-lg"></span></button>
         </section>
 
         <section class="row time-block mt-1"> 
           <div class= "col-md-1 hour  text-center mt-4 font-weight-bold text-body"> 4 PM</div>
-          <textarea id="16" class="col-md-10 bg-primary rounded text-white description"></textarea>
+          <textarea id="16" class="col-md-10 bg-primary rounded text-white description content"></textarea>
           <button class="btn saveBtn col-md-1 rounded-pill"><span class="oi oi-clipboard fa-lg"></span></button>
         </section>
 
         <section class="row time-block mt-1"> 
           <div class= "col-md-1 hour  text-center mt-4 font-weight-bold text-body"> 5 PM</div>
-          <textarea id="17" class="col-md-10 bg-primary rounded text-white description"></textarea>
+          <textarea id="17" class="col-md-10 bg-primary rounded text-white description content"></textarea>
           <button class="btn saveBtn col-md-1 rounded-pill"><span class="oi oi-clipboard fa-lg"></span></button>
         </section>
 
